<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity"
        tools:layout_editor_absoluteX="-9dp"
        tools:layout_editor_absoluteY="-24dp">


        <Button
            android:id="@+id/buttonBackSecond"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/buttonBackSecond" />

        <Button
            android:id="@+id/buttonSignUp"
            style="@style/button_sign_up"
            android:layout_marginBottom="60dp"
            android:text="@string/sign_up"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageView
            android:id="@+id/ellipse_1"
            android:layout_width="410dp"
            android:layout_height="410dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="64dp"
            android:background="@drawable/ellipse_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ellipse_7"
            android:layout_width="410dp"
            android:layout_height="410dp"
            android:layout_marginStart="84dp"
            android:layout_marginTop="240dp"
            android:background="@drawable/ellipse_6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/editTextUserName"
            android:layout_width="341dp"
            android:layout_height="79dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="296dp"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:inputType="textEmailAddress"
            android:hint="@string/create_user"
            android:textAppearance="@style/username"
            android:textColorHint="#6B6B6B"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/editTextEmailAddress"
            android:layout_width="341dp"
            android:layout_height="79dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="176dp"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"
            android:textAppearance="@style/username"
            android:textColorHint="#6B6B6B"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/editTextPassword"
            android:layout_width="341dp"
            android:layout_height="79dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="420dp"
            android:drawablePadding="12dp"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:hint="@string/create_pass"
            android:textColorHint="#6B6B6B"
            android:textAppearance="@style/password"
            android:textColor="#6B6B6B"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textCreateAccount"
            android:layout_width="284dp"
            android:layout_height="88dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/inter_bold"
            android:gravity="center_vertical"
            android:text="@string/create_acco"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
