<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GetStartedActivity">


        <Button
            android:id="@+id/buttonJoin"
            style="@style/joinNowButton"
            android:layout_marginBottom="16dp"
            android:text="@string/join_now"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textLetsGet"
            style="@style/textLetsGet"
            android:text="@string/let_s_get_s"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textGrowTogeth"
            style="@style/textGrow"
            android:layout_marginStart="56dp"
            android:layout_marginTop="532dp"
            android:text="@string/grow_togeth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/ellipse_1"
            android:layout_width="420dp"
            android:layout_height="420dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="28dp"
            android:layout_marginTop="-170dp"
            android:background="@drawable/ellipse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/ellipse_"
            android:layout_width="420dp"
            android:layout_height="420dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-20dp"
            android:layout_marginEnd="-180dp"
            android:background="@drawable/ellipse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ellipse_3"
            style="@style/circleImageSecond"
            android:src="@drawable/unsplash_sztws63"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ellipse2"
            style="@style/circleImageFirst"
            android:src="@drawable/unsplash"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>